# grade-manager

./: CMakeLists.txt  README.md
src/: Global.cpp  Global.h  GradeManager.cpp  GradeManager.h  Login.cpp  Login.h  Login.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Util.cpp  Util.h  WindowsManager.cpp  WindowsManager.h  main.cpp
src/ui/: Login.cpp  Login.h  Login.ui
